--- a/apr/pom.xml
+++ b/apr/pom.xml
@@ -14,20 +14,36 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <dependencies>
-  	<!-- for parameter setup -->
-	<dependency>
-		<groupId>commons-cli</groupId>
-		<artifactId>commons-cli</artifactId>
-		<version>1.4</version>
-	</dependency>
-  
-  
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<!-- for parameter setup -->
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.4</version>
+		</dependency>
+
+		<!-- fault localization -->
+		<dependency>
+			<groupId>com.gzoltar</groupId>
+			<artifactId>gzoltar</artifactId>
+			<version>0.1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
+	<repositories>
+		<repository>
+			<!-- com.gzoltar:gzoltar:jar:0.1.1: -->
+			<id>sachaproject.gforge.inria.fr-release</id>
+			<name>Maven Repository for Spoon Release</name>
+			<url>http://sachaproject.gforge.inria.fr/repositories/releases/</url>
+			<snapshots />
+		</repository>
+	</repositories>
 </project>
