--- a/apr/pom.xml
+++ b/apr/pom.xml
@@ -28,6 +28,13 @@
 			<artifactId>gzoltar</artifactId>
 			<version>0.1.1</version>
 		</dependency>
+		
+		<!-- FileUtils -->
+		<dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
