update to slf4j & log4j

--- a/apr/src/main/resources/log4j.properties
+++ b/apr/src/main/resources/log4j.properties
@@ -1,4 +1,6 @@
-# refer to: https://mkyong.com/logging/log4j-hello-world-example/
+# refer to: 
+# 1) https://mkyong.com/logging/log4j-hello-world-example/
+# 2) https://blog.csdn.net/qq_41947226/article/details/79800296
 
 # Root logger option
 log4j.rootLogger=DEBUG, stdout, file
