[finished] gzoltar fault localizer

--- a/apr/pom.xml
+++ b/apr/pom.xml
@@ -38,12 +38,11 @@
             <version>2.4</version>
         </dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+		<!-- <scope>test</scope> https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
 		<dependency>
 		    <groupId>org.slf4j</groupId>
 		    <artifactId>slf4j-log4j12</artifactId>
 		    <version>1.7.25</version>
-		    <scope>test</scope>
 		</dependency>
 	
 		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
