--- a/apr/src/main/resources/log4j.properties
+++ b/apr/src/main/resources/log4j.properties
@@ -13,7 +13,11 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 
 # Redirect log messages to a log file, support file rolling.
 log4j.appender.file=org.apache.log4j.RollingFileAppender
+# refer to: https://www.cnblogs.com/gaojiang/p/4126371.html
+# https://stackoverflow.com/questions/19420355/log4j-relative-path-to-create-log-file
 log4j.appender.file.File=execution.log
+# refer to: https://stackoverflow.com/questions/42367964/how-to-create-log-file-freshly-every-time-i-run-my-java-program-using-log4j
+log4j.appender.file.Append=false
 log4j.appender.file.MaxFileSize=5MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
