--- a/apr/pom.xml
+++ b/apr/pom.xml
@@ -12,8 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  	<maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+  	<maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 	
 	<dependencies>
@@ -57,8 +57,15 @@
 		    <version>3.15.14</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec 
+		refer to: https://commons.apache.org/proper/commons-codec/apidocs/org/apache/commons/codec/digest/MurmurHash3.html
+		-->
+		<dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		    <version>1.13</version>
+		</dependency>
 		
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
