--- a/apr/pom.xml
+++ b/apr/pom.xml
@@ -83,4 +83,42 @@
 			<snapshots />
 		</repository>
 	</repositories>
+	
+	<build>
+		<plugins>
+			<!-- Add support for packaging xxx-jar-with-dependencies.jar -->
+			<plugin>
+			  <groupId>org.springframework.boot</groupId>
+			  <artifactId>spring-boot-maven-plugin</artifactId>
+			  <configuration>
+			    <includeSystemScope>true</includeSystemScope>
+			  </configuration>
+			</plugin>
+		
+			<plugin>
+			    <artifactId>maven-assembly-plugin</artifactId>
+			    <version>2.4</version>
+			    <configuration>
+			        <descriptorRefs>
+			            <descriptorRef>jar-with-dependencies</descriptorRef>
+			        </descriptorRefs>
+			        <archive>
+			            <manifest>
+			                <mainClass>apr.apr.repair.main.Main</mainClass>
+			            </manifest>
+			        </archive>
+			    </configuration>
+			    <executions>
+			        <execution>
+			            <id>make-assembly</id>
+			            <phase>package</phase>
+			            <goals>
+			                <goal>single</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
+
+		</plugins>
+	</build>
 </project>
